@@ -1,3 +1,7 @@
+2008-01-13  Bruno Haible  <bruno@clisp.org>
+
+	* makemake.in: Don't use $(MAKE) -C.
+
 2008-01-13  Sam Steingold  <sds@gnu.org>
 
 	* lispbibl.d (STACK_start): declare new per_thread
